# flyby

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  lcov.info
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  hardware.yml  release.yml
articles/: README.md  catalog.toml
articles/_template/: README.md  expected-output.md
articles/_template/screenshots/: README.md
articles/part-vi-fault-injection/: README.md  expected-output.md
articles/part-vi-pcap-replay/: README.md  expected-output.md
articles/part-vi-protocol-quotes/: README.md  expected-output.md
articles/part-vi-simulator-intro/: README.md  expected-output.md
benches/: Cargo.toml  README.md
benches/benches/: builder.rs  memory.rs  net.rs  storage.rs
benches/src/: lib.rs
crates/flyby/: Cargo.toml
crates/flyby-core/: Cargo.toml
crates/flyby-core/docs/: README.md
crates/flyby-core/src/: decoder.rs  encoder.rs  error.rs  lib.rs  lifecycle.rs  message.rs  metrics.rs  pipeline.rs  placement.rs  preprocessor.rs  sink.rs  source.rs
crates/flyby-memory/: Cargo.toml
crates/flyby-memory/docs/: README.md
crates/flyby-memory/src/: lib.rs  region.rs  ring.rs  slot.rs
crates/flyby-memory/tests/: shared_memory.rs
crates/flyby-net/: Cargo.toml
crates/flyby-net/docs/: README.md
crates/flyby-net/src/: af_xdp.rs  batch.rs  config.rs  dpdk.rs  lib.rs  metrics.rs  sim.rs  source.rs
crates/flyby-net/tests/: sim_source.rs
crates/flyby-storage/: Cargo.toml
crates/flyby-storage/docs/: README.md
crates/flyby-storage/src/: batch.rs  config.rs  file.rs  framing.rs  io_uring.rs  lib.rs  metrics.rs  replay.rs  source.rs  spdk.rs
crates/flyby-storage/tests/: file_source.rs  framing.rs  replay.rs
crates/flyby/docs/: README.md
crates/flyby/src/: builder.rs  lib.rs  pipeline.rs
crates/flyby/src/runtime/: affinity.rs  backpressure.rs  config.rs  driver.rs  mod.rs  scheduler.rs  telemetry.rs
crates/flyby/tests/: runtime.rs
docs/: README.md  book.toml
docs/src/: SUMMARY.md  architecture.md  articles.md  benchmarks.md  contributing.md  engineering.md  getting-started.md  introduction.md  release.md  runtime.md  scenario-dsl.md  simulator.md  testing.md
docs/src/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-af-xdp-before-dpdk.md  0003-ebpf-is-implementation-detail.md  0004-copy-mode-before-zero-copy.md  0005-file-before-io-uring.md  0006-io-uring-before-spdk.md  0007-simulator-before-hardware.md  0008-simulator-is-a-product-feature.md  0009-batch-oriented-runtime.md  0010-runtime-independent-of-backends.md  0011-simulator-required-for-new-features.md  0012-benchmarks-are-part-of-the-api.md  README.md
docs/src/backends/: README.md  af_xdp.md  dpdk.md  io_uring.md  memory.md  spdk.md
docs/src/concepts/: README.md  decoder.md  encode.md  message.md  metrics.md  pipeline.md  placement.md  preprocessor.md  sink.md  source.md
docs/src/images/tui/: 01-paused-constant-rate.txt  02-packet-loss-stepped.txt  03-queue-overflow.txt  README.md
examples/: Cargo.toml  README.md
scenarios/: README.md  constant_rate.fly.toml  market_open_lossy.fly.toml  rhai_drop_ramp.fly.toml
scripts/: reproduce-article.sh
simulator/: Cargo.toml  README.md
simulator/examples/: gen_pcap_fixtures.rs  render_tui_docs.rs
simulator/fixtures/: README.md  burst_100.pcap  ns_timestamps.pcap  quotes_1s_1kpps.pcap  tiny_3pkt.pcap  udp_quotes.pcap
simulator/src/: clock.rs  consumer.rs  events.rs  fault.rs  generator.rs  lib.rs  main.rs  metrics.rs  nic.rs  pcap.rs  replay.rs  ring.rs  scenario.rs  scheduler.rs  storage.rs  timeline.rs  traffic.rs
simulator/src/dsl/: compile.rs  doc.rs  duration.rs  mod.rs  script.rs
simulator/src/tui/: app.rs  mod.rs  snapshot.rs  ui.rs
simulator/tests/: dsl.rs  scenarios.rs
