[package]
name = "flyby-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Benchmark harnesses for the FlyBy framework."
publish = false

[dependencies]
flyby = { workspace = true, features = ["memory"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[features]
default = []
# Enable to build the benchmark harnesses. Mirrors the facade flag.
benchmarks = []

[[bench]]
name = "builder"
harness = false
path = "benches/builder.rs"
