[package]
name = "flyby-simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "In-process simulator source for the FlyBy framework."
publish = false

[features]
default = []

[dependencies]
flyby-core = { workspace = true }

[[bin]]
name = "flyby-sim"
path = "src/main.rs"
