[package]
name = "flyby-simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "First-class FlyBy simulator: virtual NICs, storage, scenarios, and deterministic replay."
publish = false

[features]
default = []

[dependencies]
flyby-core    = { workspace = true }
flyby-net     = { workspace = true }
flyby-storage = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "flyby-sim"
path = "src/main.rs"
