[package]
name = "flyby-simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "First-class FlyBy simulator: virtual NICs, storage, scenarios, and deterministic replay."
publish = false

[features]
default = ["tui"]
## Ratatui dashboard (`flyby-sim tui`).
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
flyby-core    = { workspace = true }
flyby-net     = { workspace = true }
flyby-storage = { workspace = true }
serde         = { version = "1", features = ["derive"] }
toml          = "0.8"
rhai          = "1.21"
ratatui       = { version = "0.29", optional = true }
crossterm     = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "flyby-sim"
path = "src/main.rs"
