[package]
name = "flyby-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Platform-independent core traits, errors, and lifecycle for FlyBy."

[lib]
name = "flyby_core"
path = "src/lib.rs"
