[package]
name = "flyby-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Storage backends (file, io_uring, SPDK) for the FlyBy framework."

[lib]
name = "flyby_storage"
path = "src/lib.rs"

[features]
default = []
# io_uring storage backend. Linux-only.
io_uring = []
# SPDK storage backend. Requires an external SPDK installation.
spdk = []

[dependencies]
flyby-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
