[package]
name = "flyby"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Public facade for the FlyBy data-ingestion framework."
readme.workspace = true

[lib]
name = "flyby"
path = "src/lib.rs"

[features]
# Default feature set: only the in-process, dependency-light backends.
default = ["memory"]

# --- Backends ---------------------------------------------------------------
# Shared-memory sink (in-process, dependency-light).
memory = ["dep:flyby-memory"]
# AF_XDP source (Linux eBPF / XSK).
af_xdp = ["flyby-net/af_xdp"]
# DPDK source.
dpdk = ["flyby-net/dpdk"]
# io_uring storage backend.
io_uring = ["flyby-storage/io_uring"]
# SPDK storage backend.
spdk = ["flyby-storage/spdk"]
# In-process simulator source.
simulator = []
# Build the benchmark harnesses. Heavy; never enabled by default.
benchmarks = []

[dependencies]
flyby-core = { workspace = true }
flyby-memory = { workspace = true, optional = true }
flyby-net = { workspace = true, optional = false }
flyby-storage = { workspace = true, optional = false }

[dev-dependencies]
