[package]
name = "flyby"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Public facade for the FlyBy data-ingestion framework."
readme.workspace = true

[lib]
name = "flyby"
path = "src/lib.rs"

[features]
# Default feature set: only the in-process, dependency-light backends.
default = ["memory"]

# --- Backends ---------------------------------------------------------------
memory = ["dep:flyby-memory"]
af_xdp = ["flyby-net/af_xdp"]
dpdk = ["flyby-net/dpdk"]
io_uring = ["flyby-storage/io_uring"]
spdk = ["flyby-storage/spdk"]
# Builder selector for SimulatedNetSource (always available via flyby::net).
simulator = []
# Reserved; criterion benches live in the benches package.
benchmarks = []

[dependencies]
flyby-core = { workspace = true }
flyby-memory = { workspace = true, optional = true }
flyby-net = { workspace = true }
flyby-storage = { workspace = true }

[dev-dependencies]
